# erm-tools-rs

./: .gitignore  Cargo.toml  README.md  erm-tools.json  mysql_type.json
conf/: cov_type_mysql.json
erms/: db.erm  db2.erm
src/: lib.rs  main.rs
src/core/: ddl_out.rs  env.rs  erm_read.rs  md_out.rs  mod.rs  mysql_read.rs  tb_diff.rs
src/model/: diff_table.rs  erm.rs  mod.rs  table.rs
tests/: diff_out.rs
