[package]
name = "erm-tools"
version = "0.1.0"
authors = ["luokai <kaiv2@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name= "erm-tools"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
quick-xml = { version = "0.31.0", features = [ "serialize" ] }
log = "0.4"
mysql = "*"
clap = { version = "4.4.12", features = ["derive"] }
lazy_static = "1.4.0"
